# data-engineering-exercise

./: Dockerfile  LICENSE  README.md  list_csv.txt  process.bash  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: architecture.md  exploration.md  performance.md
scripts/: check_csv_files.py  list_csv_files.py
src/: dataeng.py
src/dataeng/: __init__.py  dataeng.py  heuristics.py
tests/: test_compute.py  test_dataeng.py  test_e2e.py  test_loader.py
tests/data/: yellow_tripdata_2009-09-small.csv  yellow_tripdata_2014-08-small.csv  yellow_tripdata_2020-01-small.csv
